Add jib to generate docker images